# algorithms

./: .gitignore  .gitmodules  CMakeLists.txt
3n+1/: CMakeLists.txt  main.cpp
chess/: CMakeLists.txt  main.cpp
chess/include/: bits.hpp  king.hpp  knight.hpp  rook.hpp
compression/: CMakeLists.txt  README.md  main.cpp  test_rle.py
compression/huffman/: CMakeLists.txt  main.cpp
compression/huffman/include/: huffman.hpp  simple_tree.hpp
compression/include/: huffman.hpp  rle.hpp  rle_v2.hpp
compression/rle/: CMakeLists.txt  main.cpp
compression/rle/include/: rle.hpp
compression/test/: SOUND_WHITE_NOISE.m4a
dynamic_prog/: CMakeLists.txt  main.cpp
dynamic_prog/include/: _58.hpp  digital_fir.hpp  islands.hpp  pea.hpp  shed.hpp  shed_n^4.hpp
eratosthenes/: CMakeLists.txt  main.cpp
eratosthenes/include/: eratosthenes.hpp
fibonacci/: CMakeLists.txt  main.cpp
fibonacci/include/: fibonacci.hpp
file/: CMakeLists.txt  README.md  main.cpp
file/include/: file_path_config.hpp.in
graph/: CMakeLists.txt  main.cpp
graph/include/: demucron.hpp  dijkstra.hpp  edge.hpp  kosaraju.hpp  kraskal.hpp  tarjan.hpp
harry-potter/: CMakeLists.txt  main.cpp
hash/: CMakeLists.txt  main.cpp
hash/include/: hash.hpp  hash_table.hpp  map.hpp
lists/: CMakeLists.txt  README.md  main.cpp
lists/include/: array.hpp  counting_priority_queue.hpp  factor_array.hpp  priotity_queue.hpp  ptr_factor_array.hpp  queue.hpp  single_array.hpp  vector_array.hpp
lucky-ticket/: CMakeLists.txt  GenerateTestCases.cmake  README  README.md  generate_test_cases.py  main.cpp
lucky-ticket/include/: table_generator.hpp
lucky-ticket/src/: table_generator.cpp  table_generator_test.cc
map/: CMakeLists.txt  main.cpp
map/include/: chain_bucket.hpp  deletable.hpp  deletable_entry.hpp  hash_table.hpp  hash_table_woa.hpp  map.hpp  simple_entry.hpp
number/: CMakeLists.txt  main.cpp
number/include/: number.hpp
pow/: CMakeLists.txt  main.cpp
pow/include/: pow.hpp
probabilistic/: CMakeLists.txt  main.cpp
probabilistic/include/: bloom_filter.hpp
sort/: CMakeLists.txt  README.md  main.cpp
sort/include/: array_sort.hpp  bubble_sort.hpp  bubble_sort_v2.hpp  bucket_sort.hpp  counting_sort.hpp  external_sort.hpp  file_sort.hpp  file_sort_v2.hpp  heap_sort.hpp  insertion_sort.hpp  merge_sort.hpp  optimized_bubble_sort.hpp  quick_sort_optimized.hpp  quick_sort_original.hpp  radix_sort.hpp  selection_sort.hpp  shell_sort.hpp  shifted_insertion_sort.hpp
sort_test/: CMakeLists.txt  main.cpp
stack/: CMakeLists.txt
stack/include/: stack.hpp
text_search/: CMakeLists.txt  README.md  main.cpp
text_search/include/: auto_scan.hpp  bm_scan.hpp  full_scan.hpp  kmp_scan.hpp  prefix_scan.hpp  scan.hpp  suffix_scan.hpp
tree/: CMakeLists.txt  README.md  main.cpp
tree/include/: avl_tree.hpp  b_tree.hpp  bs_tree.hpp  prefix_tree.hpp  r_tree.hpp  tree.hpp
utils/: CMakeLists.txt  md_builder.cpp
utils/include/: utils.hpp
