cmake_minimum_required(VERSION 3.17)
project(algorithms)

add_subdirectory(lib/tabulate)
##add_subdirectory(lib/boost)

##add_subdirectory(3n+1)
add_subdirectory(lucky-ticket)
add_subdirectory(lists)
add_subdirectory(harry-potter)
add_subdirectory(eratosthenes)
add_subdirectory(number)
add_subdirectory(fibonacci)
add_subdirectory(pow)
add_subdirectory(utils)
add_subdirectory(chess)
add_subdirectory(sort)
add_subdirectory(file)
add_subdirectory(tree)
add_subdirectory(map)
add_subdirectory(hash)
add_subdirectory(graph)
add_subdirectory(text_search)